[gd_scene load_steps=35 format=3 uid="uid://cc5cjso4rewoc"]

[ext_resource type="Script" path="res://Jogador/jogador.gd" id="1_5cmx2"]
[ext_resource type="Texture2D" uid="uid://clk5ubahrsbd5" path="res://Assets/Nave-teste.png" id="1_5pu6w"]
[ext_resource type="PackedScene" uid="uid://1iqtcsekf216" path="res://Componentes/Personagens/VidaComponente.tscn" id="2_8u40v"]
[ext_resource type="Texture2D" uid="uid://b0e88qnijlfa" path="res://Assets/Tailmap.png" id="3_elw1v"]
[ext_resource type="PackedScene" uid="uid://bkltef67bey07" path="res://Componentes/Personagens/HurtboxComponente.tscn" id="3_fhkuy"]
[ext_resource type="PackedScene" uid="uid://b34jet1tydsdr" path="res://Componentes/Personagens/AtaqueComponente.tscn" id="4_n7yw1"]
[ext_resource type="Script" path="res://PowerUps/PowerUpComponente.gd" id="4_uli4u"]
[ext_resource type="PackedScene" uid="uid://gqi0hrxjam48" path="res://Projeteis/Jogador/AtaqueBase.tscn" id="5_dfde3"]
[ext_resource type="AudioStream" uid="uid://bhvd46cxgyjwi" path="res://Assets/audio/hitHurt.wav" id="8_78oj4"]
[ext_resource type="Script" path="res://Jogador/VidaJogador.gd" id="8_767bi"]
[ext_resource type="Texture2D" uid="uid://juegn6or138" path="res://icon.svg" id="9_ic1pu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6tdck"]
atlas = ExtResource("1_5pu6w")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e7cd"]
atlas = ExtResource("3_elw1v")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f23nl"]
atlas = ExtResource("1_5pu6w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok3uv"]
atlas = ExtResource("3_elw1v")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsr3x"]
atlas = ExtResource("1_5pu6w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0be7w"]
atlas = ExtResource("1_5pu6w")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_71s62"]
atlas = ExtResource("3_elw1v")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgshq"]
atlas = ExtResource("3_elw1v")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xdg5"]
atlas = ExtResource("3_elw1v")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_42d70"]
atlas = ExtResource("3_elw1v")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuegl"]
atlas = ExtResource("3_elw1v")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_feqe7"]
atlas = ExtResource("3_elw1v")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi6o0"]
atlas = ExtResource("3_elw1v")
region = Rect2(128, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmxjp"]
atlas = ExtResource("1_5pu6w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwh5r"]
atlas = ExtResource("1_5pu6w")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nqx4h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tdck")
}],
"loop": true,
"name": &"direita",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e7cd")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e7cd")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"direita_respawnando",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f23nl")
}],
"loop": true,
"name": &"esquerda",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok3uv")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok3uv")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"esquerda_respawnando",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsr3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0be7w")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_71s62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgshq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xdg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42d70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuegl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feqe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi6o0")
}],
"loop": true,
"name": &"morte",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmxjp")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwh5r")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"respawn",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_7l83r"]
script/source = "extends AnimatedSprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func playMorte():
	play(\"morte\")
	
func playRespawn():
	play(\"respawn\")

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tnthg"]
size = Vector2(28, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfkgr"]
atlas = ExtResource("9_ic1pu")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3di1"]
atlas = ExtResource("9_ic1pu")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j5dq"]
atlas = ExtResource("9_ic1pu")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm32x"]
atlas = ExtResource("9_ic1pu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hbdgn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfkgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3di1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j5dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm32x")
}],
"loop": true,
"name": &"escudo",
"speed": 5.0
}]

[node name="Jogador" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
motion_mode = 1
script = ExtResource("1_5cmx2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AtaqueDelay" type="Timer" parent="."]
wait_time = 0.1

[node name="PowerUpDelay" type="Timer" parent="."]
wait_time = 0.3

[node name="RespawnDelay" type="Timer" parent="."]
wait_time = 2.0

[node name="Animacao" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_nqx4h")
animation = &"idle"
script = SubResource("GDScript_7l83r")

[node name="AtaqueComponente" parent="." instance=ExtResource("4_n7yw1")]
projetil = ExtResource("5_dfde3")

[node name="PowerUpComponente" type="Node2D" parent="."]
script = ExtResource("4_uli4u")

[node name="VidaComponente" parent="." node_paths=PackedStringArray("efeito") instance=ExtResource("2_8u40v")]
script = ExtResource("8_767bi")
efeito = NodePath("../AudioStreamPlayer")
VidaMaxima = 1

[node name="HurtboxComponente" parent="." node_paths=PackedStringArray("Vida") instance=ExtResource("3_fhkuy")]
Vida = NodePath("../VidaComponente")

[node name="Hurtbox2D" type="CollisionShape2D" parent="HurtboxComponente"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_tnthg")

[node name="escudo" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.317647)
show_behind_parent = true
position = Vector2(0, -1)
scale = Vector2(1, 0.9375)
sprite_frames = SubResource("SpriteFrames_hbdgn")
animation = &"escudo"
frame = 1
frame_progress = 0.569773

[node name="Teste" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_78oj4")
volume_db = -2.0

[node name="ReturnSpeedDelay" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="AtaqueDelay" to="." method="_on_ataque_delay_timeout"]
[connection signal="timeout" from="PowerUpDelay" to="." method="_on_power_up_delay_timeout"]
[connection signal="timeout" from="RespawnDelay" to="." method="_on_respawn_delay_timeout"]
[connection signal="animation_finished" from="Animacao" to="VidaComponente" method="_on_animação_animation_finished"]
[connection signal="timeout" from="Teste" to="." method="_on_teste_timeout"]
[connection signal="timeout" from="ReturnSpeedDelay" to="." method="_on_return_speed_delay_timeout"]
